[gd_scene load_steps=2 format=3 uid="uid://d1pamf7vuhbmg"]

[ext_resource type="Script" path="res://Scenes/CanvasLayers/FormulaNotebook/Scripts/formula_notebook.gd" id="1_t2gnw"]

[node name="FormulaNotebook" type="ColorRect"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -576.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.24, 0.14388, 0.0264, 1)
script = ExtResource("1_t2gnw")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Control1" type="Control" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Button1" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 0
text = "<-"

[node name="Control2" type="Control" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0

[node name="Label2" type="Label" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0
text = "Formula notebook"

[node name="Control3" type="Control" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 4.0

[node name="EntryContainer" type="VBoxContainer" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[connection signal="pressed" from="VBoxContainer/HBoxContainer/Button1" to="." method="_on_button_1_pressed"]
